testsuite/poke.pkl/units-diag-1.pk
/* { dg-do compile } */

unit x = [1,2,3]; /* { dg-error "" } */
